--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   padding: 20px;
   justify-content: center;
+  position: relative; /* Required to absolutely position logo */
   flex-wrap: wrap;
 }
 
